# greenscan

./: .env.example  .gitignore  01_tech_stack_evaluation.md  02_architecture.md  03_backlog.md  04_recommended_stack_summary.md  BACKLOG.md  CLAUDE.md  Competitors GG - US Agriculture Operators 2.csv  RUNBOOK.md  SPRINT_REVIEW.md  greenscan_overview (1).html  pyproject.toml  targets.yaml
.github/workflows/: daily_pipeline.yml  dead_mans_switch.yml  keepalive.yml  test.yml
docs/: HANDOVER.md  changelog.md  changelog_2026-04-08.md  overview.md
docs/research/: 12_final_plan.md
pipeline/: __main__.py  config.py  main.py
pipeline/brief/: generator.py
pipeline/classifier/: categorizer.py  llm.py  prefilter.py  prompts.py
pipeline/delivery/: telegram.py
pipeline/enrichment/: contacts.py  dedup.py  linker.py
pipeline/scraper/: models.py  registry.py  rss.py  serp.py  web.py
pipeline/storage/: db.py
pipeline/storage/migrations/: 001_initial.sql
scripts/: apply_research.py  deep_discover.py  discover_urls.py  parse_csv_targets.py
tests/: test_brief.py  test_classifier.py  test_contacts.py  test_dedup.py  test_fallback.py  test_linker.py  test_models.py  test_prefilter.py  test_registry.py  test_serp.py  test_storage.py
